[package]
name = "bitcoin"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio-serde = { version = "0.9.0", features = ["json"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
futures = "0.3.31"
rand = "0.9.2"
